    - Document the client's choice of default server principal.
    - Fix an exit rather than error in the client library after an out of
      memory error.
    - Close file descriptors in the server when spawning children.
    - Fix Perl API interface for requesting the default principal.
    - Fix test suite failure when DNS lookups fail.  Thanks, Lucas
      Nussbaum.  (Closes: #467590)

 -- Russ Allbery <rra@debian.org>  Fri, 04 Apr 2008 22:14:28 -0700

remctl (2.11-3) unstable; urgency=low

  * Add the correct Perl dependencies for libnet-remctl-perl.
  * Really rebuild the Perl module to remove an unnecessary libgssapi_krb5
    dependency.
  * Update standards version to 3.7.3 (no changes required).

 -- Russ Allbery <rra@debian.org>  Mon, 28 Jan 2008 11:26:27 -0800

remctl (2.11-2) unstable; urgency=low

  * Create a symbols file for libremctl1 and tighten build dependencies
    accordingly.

 -- Russ Allbery <rra@debian.org>  Tue, 20 Nov 2007 13:41:16 -0800

remctl (2.11-1) unstable; urgency=low

  * New upstream release.
    - Default to IANA-assigned port 4373.
    - Fall back to old 4444 port on client connections.
    - Fix remctld segfault when given a command with no service.
    - Improve remctld man page.
  * Change the port number when creating the initial inetd.conf entry.
  * Remove inetd.conf entries for both 4444 and 4373 on package removal.
  * Move Homepage pseudo-headers to a proper control header now that dpkg
    supports this.

 -- Russ Allbery <rra@debian.org>  Sun, 11 Nov 2007 13:28:28 -0800

remctl (2.10-1) unstable; urgency=low

  * New upstream release.
    - Fix server crash when client sends too many arguments.
    - Request sequence protection, don't require replay protection.
    - Standalone remctld removes PID file and handles signals.
    - Standalone remctld re-reads config on SIGHUP.
    - Standalone remctld doesn't exit after an hour.
    - libremctl now uses symbol versioning.